--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Radley:ital@0;1&display=swap" rel="stylesheet">
      <title> EconoVision - Portal de Noticias Económicas</title>
-    <link rel="stylesheet" href="../econo-vision/estilos/style.css">
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <header>
