--- a/pages/argentina.html
+++ b/pages/argentina.html
@@ -8,6 +8,10 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Radley:ital@0;1&display=swap" rel="stylesheet">
      <title> EconoVision - Portal de Noticias Económicas</title>
    <link rel="stylesheet" href="../estilos/style.css">
+
+<link rel="stylesheet" href="../css/estilos.css">
+
+    
 </head>
 <body>
     <header>
@@ -22,7 +26,7 @@
     </header>
 
     <main class="argentina">
-        <h1 class="economiaargentina">Economía Argentina</h1>
+        <h1 class="economiaargentina">Argentina</h1>
         <section>
             <h2 class="ultimahora" >Última hora</h2>
             <article>
