--- a/pages/mercado.html
+++ b/pages/mercado.html
@@ -8,10 +8,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Radley:ital@0;1&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="../estilos/style.css">
+
+<link rel="stylesheet" href="../css/estilos.css">
+
+
 </head>
 <body>
     <header>
-        <h1 class="mercado1">Mercado</h1>
+        
 <nav class="navbar">
             <ul>
                <li><a href="../index.html">Inicio</a></li>
@@ -74,7 +78,7 @@
     </main>
 
     <footer>
-        <p>EconoVision. Todos los derechos reservados</p>
+        <p> ©EconoVision. Todos los derechos reservados</p>
     </footer>
 </body>
 </html>
