--- a/pages/mundial.html
+++ b/pages/mundial.html
@@ -8,6 +8,12 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Radley:ital@0;1&display=swap" rel="stylesheet">
      <title> EconoVision - Portal de Noticias Económicas</title>
    <link rel="stylesheet" href="../estilos/style.css">
+
+<link rel="stylesheet" href="../css/estilos.css">
+
+
+
+
 </head>
 <body>
            <header>
@@ -79,7 +85,7 @@
     </main>
 
     <footer>
-        <p>>© 2023 EconoVision - Todos los derechos reservados</p>
+        <p>© 2023 EconoVision - Todos los derechos reservados</p>
     </footer>
 </body>
 </html>
